# apps/api/src/routes/api.routes.ts
@@ -3,6 +3,7 @@ import { brandRoutes } from "./brand.routes";
 import { categoryRoutes } from "./category.routes";
 import { productRoutes } from "./product.routes";
 import { authRoutes } from "./auth.routes";
+import { uploadRoutes } from "./upload.routes";
 
 const apiRoutes = new Hono();
 
@@ -10,5 +11,6 @@ apiRoutes.route("/brands", brandRoutes);
 apiRoutes.route("/categories", categoryRoutes);
 apiRoutes.route("/products", productRoutes);
 apiRoutes.route("/auth", authRoutes);
+apiRoutes.route("/upload", uploadRoutes);
 
 export { apiRoutes };
