# apps/api/src/routes/upload.routes.ts
@@ -1,0 +1,8 @@
+import { Hono } from "hono";
+import * as handlers from "../handlers/upload";
+
+const uploadRoutes = new Hono();
+
+uploadRoutes.post("/", handlers.uploadFile);
+
+export { uploadRoutes };
